p2/shared/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app1
    namespace: hello
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: app1
    template:
        metadata:
            labels:
                app.kubernetes.io/name: app1
        spec:
            containers:
                - name: hello-kubernetes
                  image: paulbouwer/hello-kubernetes:1.10
                  ports:
                    - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app2
    namespace: hello
spec:
    replicas: 3
    selector:
        matchLabels:
            app.kubernetes.io/name: app2
    template:
        metadata:
            labels:
                app.kubernetes.io/name: app2
        spec:
            containers:
                - name: hello-kubernetes
                  image: paulbouwer/hello-kubernetes:1.10
                  ports:
                    - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app3
    namespace: hello
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: app3
    template:
        metadata:
            labels:
                app.kubernetes.io/name: app3
        spec:
            containers:
                - name: hello-kubernetes
                  image: paulbouwer/hello-kubernetes:1.10
                  ports:
                    - containerPort: 8080
