p2/shared/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
    name: app1-svc
    namespace: p2
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app.kubernetes.io/name: app1
---
apiVersion: v1
kind: Service
metadata:
    name: app2-svc
    namespace: p2
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app.kubernetes.io/name: app2
---
apiVersion: v1
kind: Service
metadata:
    name: app3-svc
    namespace: p2
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app.kubernetes.io/name: app3
